// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard page snapshot renders unauthenticated state 1`] = `
<div>
  <div
    class="max-w-6xl mx-auto px-4 sm:px-6 py-16 cursor-default select-none"
  >
    <div
      class="text-center mb-10"
    >
      <h1
        class="font-display text-3xl font-bold text-white mb-3"
      >
        Dashboard
      </h1>
      <p
        class="text-slate-400"
      >
        Connect your wallet to get started
      </p>
    </div>
  </div>
</div>
`;

exports[`Home page snapshot renders landing page 1`] = `
<div>
  <div
    class="relative overflow-hidden cursor-default select-none"
  >
    <title>
      Home | Stellar-MicroPay
    </title>
    <meta
      content="Experience lightning-fast micropayments on the Stellar network. Send funds globally for fractions of a cent."
      name="description"
    />
    <link
      href="https://stellar-micropay.vercel.app/"
      rel="canonical"
    />
    <div
      class="absolute top-0 left-1/2 -translate-x-1/2 w-[600px] h-[400px] bg-stellar-500/5 rounded-full blur-3xl pointer-events-none"
    />
    <div
      class="absolute top-20 right-0 w-[300px] h-[300px] bg-stellar-600/5 rounded-full blur-2xl pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="hero-particles"
    >
      <span
        data-p=""
        style="top: 8%; left: 12%; --sz: 2px; --op: 0.7; --dur: 7s; --delay: 0s;"
      />
      <span
        data-p=""
        style="top: 15%; left: 80%; --sz: 3px; --op: 0.5; --dur: 9s; --delay: 1s;"
      />
      <span
        data-p=""
        style="top: 25%; left: 35%; --sz: 2px; --op: 0.6; --dur: 6s; --delay: 2s;"
      />
      <span
        data-p=""
        style="top: 40%; left: 90%; --sz: 2px; --op: 0.4; --dur: 8s; --delay: 0.5s;"
      />
      <span
        data-p=""
        style="top: 55%; left: 5%; --sz: 3px; --op: 0.6; --dur: 11s; --delay: 1.5s;"
      />
      <span
        data-p=""
        style="top: 60%; left: 60%; --sz: 2px; --op: 0.5; --dur: 7s; --delay: 3s;"
      />
      <span
        data-p=""
        style="top: 70%; left: 25%; --sz: 2px; --op: 0.4; --dur: 9s; --delay: 0.8s;"
      />
      <span
        data-p=""
        style="top: 80%; left: 70%; --sz: 3px; --op: 0.6; --dur: 6s; --delay: 2.2s;"
      />
      <span
        data-p=""
        style="top: 5%; left: 50%; --sz: 2px; --op: 0.5; --dur: 8s; --delay: 1.8s;"
      />
      <span
        data-p=""
        style="top: 35%; left: 18%; --sz: 2px; --op: 0.7; --dur: 10s; --delay: 0.3s;"
      />
      <span
        data-p=""
        style="top: 50%; left: 45%; --sz: 3px; --op: 0.4; --dur: 7s; --delay: 2.5s;"
      />
      <span
        data-p=""
        style="top: 88%; left: 88%; --sz: 2px; --op: 0.6; --dur: 9s; --delay: 1.1s;"
      />
      <span
        data-p=""
        style="top: 20%; left: 65%; --sz: 2px; --op: 0.5; --dur: 6s; --delay: 3.5s;"
      />
      <span
        data-p=""
        style="top: 75%; left: 40%; --sz: 3px; --op: 0.4; --dur: 11s; --delay: 0.7s;"
      />
      <span
        data-p=""
        style="top: 45%; left: 78%; --sz: 2px; --op: 0.6; --dur: 8s; --delay: 1.4s;"
      />
      <span
        data-p=""
        style="top: 12%; left: 95%; --sz: 2px; --op: 0.3; --dur: 7s; --delay: 2.8s;"
      />
      <span
        data-p=""
        style="top: 65%; left: 8%; --sz: 3px; --op: 0.5; --dur: 9s; --delay: 0.6s;"
      />
      <span
        data-p=""
        style="top: 92%; left: 22%; --sz: 2px; --op: 0.4; --dur: 6s; --delay: 1.9s;"
      />
      <span
        data-p=""
        style="top: 30%; left: 52%; --sz: 2px; --op: 0.6; --dur: 10s; --delay: 3.1s;"
      />
      <span
        data-p=""
        style="top: 85%; left: 55%; --sz: 3px; --op: 0.5; --dur: 8s; --delay: 0.4s;"
      />
    </div>
    <div
      class="max-w-6xl mx-auto px-4 sm:px-6 py-20"
    >
      <div
        class="text-center mb-20 animate-fade-in"
      >
        <div
          class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full border border-stellar-500/25 bg-stellar-500/8 text-stellar-400 text-xs font-medium mb-8"
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-stellar-400 animate-pulse"
          />
          Built on Stellar Testnet · Open Source
        </div>
        <h1
          class="font-display text-5xl sm:text-6xl md:text-7xl font-bold text-white leading-tight mb-6"
        >
          Money moves at the
           
          <span
            class="text-gradient"
          >
            speed of light
          </span>
        </h1>
        <p
          class="text-slate-400 text-lg sm:text-xl max-w-2xl mx-auto mb-10 leading-relaxed"
        >
          Stellar MicroPay lets anyone send tiny payments across borders instant — for fractions of a cent. No bank. No borders. No friction.
        </p>
        <div
          class="flex flex-col sm:flex-row items-center justify-center gap-4"
        >
          <button
            aria-label="Connect wallet to start sending payments"
            class="btn-primary text-base px-8 py-3.5"
          >
            Connect Wallet & Start
          </button>
          <a
            aria-label="View Stellar-MicroPay source code on GitHub"
            class="btn-secondary text-base px-8 py-3.5 flex items-center gap-2"
            href="https://github.com/your-org/stellar-micropay"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-label="GitHub"
              class="w-4 h-4"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
            >
              <title>
                GitHub
              </title>
              <path
                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23A11.509 11.509 0 0112 5.803c1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576C20.566 21.797 24 17.3 24 12c0-6.627-5.373-12-12-12z"
              />
            </svg>
            View on GitHub
          </a>
        </div>
      </div>
      <div
        class="grid grid-cols-3 gap-px bg-stellar-500/10 rounded-2xl overflow-hidden mb-24 border border-stellar-500/15 cursor-default"
      >
        <div
          class="bg-cosmos-900 text-center py-8 px-4"
        >
          <div
            class="font-display text-3xl font-bold text-gradient mb-1"
          >
            3–
            5
            s
          </div>
          <div
            class="text-slate-500 text-sm"
          >
            Settlement time
          </div>
        </div>
        <div
          class="bg-cosmos-900 text-center py-8 px-4"
        >
          <div
            class="font-display text-3xl font-bold text-gradient mb-1"
          >
            $
            0.00001
          </div>
          <div
            class="text-slate-500 text-sm"
          >
            Average fee
          </div>
        </div>
        <div
          class="bg-cosmos-900 text-center py-8 px-4"
        >
          <div
            class="font-display text-3xl font-bold text-gradient mb-1"
          >
            100
            +
          </div>
          <div
            class="text-slate-500 text-sm"
          >
            Countries supported
          </div>
        </div>
      </div>
      <div
        class="grid sm:grid-cols-2 gap-5 mb-24"
      >
        <div
          class="card hover:border-stellar-500/30 transition-colors group cursor-default"
        >
          <div
            class="text-2xl mb-3"
          >
            ⚡
          </div>
          <h3
            class="font-display font-semibold text-white mb-2 group-hover:text-stellar-300 transition-colors"
          >
            Instant Settlement
          </h3>
          <p
            class="text-slate-400 text-sm leading-relaxed"
          >
            Stellar transactions confirm in 3–5 seconds. No waiting for bank transfers.
          </p>
        </div>
        <div
          class="card hover:border-stellar-500/30 transition-colors group cursor-default"
        >
          <div
            class="text-2xl mb-3"
          >
            🌍
          </div>
          <h3
            class="font-display font-semibold text-white mb-2 group-hover:text-stellar-300 transition-colors"
          >
            Truly Global
          </h3>
          <p
            class="text-slate-400 text-sm leading-relaxed"
          >
            Send XLM to anyone with a Stellar address, anywhere in the world.
          </p>
        </div>
        <div
          class="card hover:border-stellar-500/30 transition-colors group cursor-default"
        >
          <div
            class="text-2xl mb-3"
          >
            💰
          </div>
          <h3
            class="font-display font-semibold text-white mb-2 group-hover:text-stellar-300 transition-colors"
          >
            Micro Fees
          </h3>
          <p
            class="text-slate-400 text-sm leading-relaxed"
          >
            Each transaction costs ~0.00001 XLM. Send $0.01 or $1,000 for the same fee.
          </p>
        </div>
        <div
          class="card hover:border-stellar-500/30 transition-colors group cursor-default"
        >
          <div
            class="text-2xl mb-3"
          >
            🔐
          </div>
          <h3
            class="font-display font-semibold text-white mb-2 group-hover:text-stellar-300 transition-colors"
          >
            Non-Custodial
          </h3>
          <p
            class="text-slate-400 text-sm leading-relaxed"
          >
            Your keys, your funds. We never touch your private key.
          </p>
        </div>
      </div>
      <section
        class="mb-24"
      >
        <div
          class="max-w-3xl mx-auto"
        >
          <div
            class="text-center mb-8"
          >
            <h2
              class="font-display text-3xl sm:text-4xl font-bold text-white mb-3"
            >
              What is Stellar?
            </h2>
            <p
              class="text-slate-400 text-sm sm:text-base"
            >
              A quick explainer for newcomers, with links to the official Stellar docs.
            </p>
          </div>
          <div
            class="space-y-4"
          >
            <details
              class="card cursor-default group"
            >
              <summary
                class="cursor-pointer list-none flex items-center justify-between gap-4 text-left text-white font-semibold"
              >
                <span>
                  What is Stellar?
                </span>
                <span
                  class="text-stellar-400 text-xl transition-transform duration-200 group-open:rotate-45"
                >
                  +
                </span>
              </summary>
              <div
                class="mt-4 text-sm leading-relaxed text-slate-400 space-y-3"
              >
                <p>
                  Stellar is an open blockchain network for moving money quickly and with very low fees. It's designed for payments, remittances, and cross-border transfers that settle faster than traditional bank systems.
                </p>
                <p>
                  Read the official
                   
                  <a
                    class="text-stellar-400 hover:text-stellar-300 underline underline-offset-4"
                    href="https://developers.stellar.org/docs/learn/overview"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Stellar overview
                  </a>
                  .
                </p>
              </div>
            </details>
            <details
              class="card cursor-default group"
            >
              <summary
                class="cursor-pointer list-none flex items-center justify-between gap-4 text-left text-white font-semibold"
              >
                <span>
                  What is XLM?
                </span>
                <span
                  class="text-stellar-400 text-xl transition-transform duration-200 group-open:rotate-45"
                >
                  +
                </span>
              </summary>
              <div
                class="mt-4 text-sm leading-relaxed text-slate-400 space-y-3"
              >
                <p>
                  XLM is Stellar's native asset. It's used to pay transaction fees and can also be sent directly like any other digital currency.
                </p>
                <p>
                  See the official
                   
                  <a
                    class="text-stellar-400 hover:text-stellar-300 underline underline-offset-4"
                    href="https://developers.stellar.org/docs/tokens"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    token docs
                  </a>
                  .
                </p>
              </div>
            </details>
            <details
              class="card cursor-default group"
            >
              <summary
                class="cursor-pointer list-none flex items-center justify-between gap-4 text-left text-white font-semibold"
              >
                <span>
                  How fast is it?
                </span>
                <span
                  class="text-stellar-400 text-xl transition-transform duration-200 group-open:rotate-45"
                >
                  +
                </span>
              </summary>
              <div
                class="mt-4 text-sm leading-relaxed text-slate-400 space-y-3"
              >
                <p>
                  Stellar transactions typically confirm in just a few seconds, which is why it feels much faster than a bank transfer.
                </p>
                <p>
                  Read about transaction flow in the
                   
                  <a
                    class="text-stellar-400 hover:text-stellar-300 underline underline-offset-4"
                    href="https://developers.stellar.org/docs/learn/fundamentals/transactions"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    official transaction docs
                  </a>
                  .
                </p>
              </div>
            </details>
            <details
              class="card cursor-default group"
            >
              <summary
                class="cursor-pointer list-none flex items-center justify-between gap-4 text-left text-white font-semibold"
              >
                <span>
                  How much does it cost?
                </span>
                <span
                  class="text-stellar-400 text-xl transition-transform duration-200 group-open:rotate-45"
                >
                  +
                </span>
              </summary>
              <div
                class="mt-4 text-sm leading-relaxed text-slate-400 space-y-3"
              >
                <p>
                  Fees are tiny—usually a fraction of a cent. That makes Stellar useful for small payments where a bank transfer would be expensive or too slow.
                </p>
                <p>
                  See the official
                   
                  <a
                    class="text-stellar-400 hover:text-stellar-300 underline underline-offset-4"
                    href="https://developers.stellar.org/docs/learn/fundamentals/transactions"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    fee and transaction docs
                  </a>
                  .
                </p>
              </div>
            </details>
            <details
              class="card cursor-default group"
            >
              <summary
                class="cursor-pointer list-none flex items-center justify-between gap-4 text-left text-white font-semibold"
              >
                <span>
                  Is it safe?
                </span>
                <span
                  class="text-stellar-400 text-xl transition-transform duration-200 group-open:rotate-45"
                >
                  +
                </span>
              </summary>
              <div
                class="mt-4 text-sm leading-relaxed text-slate-400 space-y-3"
              >
                <p>
                  Stellar uses public-key cryptography, so only the owner of a wallet can sign transactions from it. As with any blockchain app, keeping your recovery phrase and private keys secure is essential.
                </p>
                <p>
                  Learn more about account security and the network in the
                   
                  <a
                    class="text-stellar-400 hover:text-stellar-300 underline underline-offset-4"
                    href="https://developers.stellar.org/docs/learn/fundamentals/accounts"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    official account docs
                  </a>
                   
                  and
                   
                  <a
                    class="text-stellar-400 hover:text-stellar-300 underline underline-offset-4"
                    href="https://developers.stellar.org/docs/networks"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    network docs
                  </a>
                  .
                </p>
              </div>
            </details>
          </div>
        </div>
      </section>
      <div
        class="text-center pt-12 border-t border-white/5"
      >
        <p
          class="text-slate-600 text-sm"
        >
          Open source · MIT License ·
           
          <a
            class="hover:text-stellar-400 transition-colors cursor-pointer"
            href="https://github.com/your-org/stellar-micropay"
            rel="noopener noreferrer"
            target="_blank"
          >
            Contribute on GitHub
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar snapshot renders disconnected state 1`] = `
<div>
  <nav
    class="sticky top-0 z-50 border-b border-[rgba(14,165,233,0.12)] bg-white/80 backdrop-blur-xl transition-colors duration-300 dark:bg-cosmos-900/80"
  >
    <div
      class="mx-auto flex h-16 max-w-6xl items-center justify-between px-4 sm:px-6"
    >
      <div
        class="flex items-center gap-4"
      >
        <a
          href="/"
        >
          <div
            class="flex h-8 w-8 items-center justify-center rounded-lg border border-stellar-500/30 bg-stellar-500/20 transition-colors group-hover:border-stellar-500/60"
          >
            <svg
              class="h-4 w-4 text-stellar-400"
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2L14.09 8.26L21 9L15.5 14.14L17.18 21L12 17.77L6.82 21L8.5 14.14L3 9L9.91 8.26L12 2Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <span
            class="font-display font-semibold tracking-tight text-slate-900 dark:text-white"
          >
            Stellar
            <span
              class="text-stellar-400"
            >
              MicroPay
            </span>
          </span>
        </a>
        <span
          class="hidden items-center rounded-full border px-2.5 py-1 text-xs font-semibold uppercase tracking-wide md:inline-flex border-amber-400/35 bg-amber-400/10 text-amber-300"
        >
          Testnet
        </span>
        <div
          class="hidden items-center gap-1 md:flex"
        >
          <a
            href="/"
          >
            Home
          </a>
          <a
            href="/dashboard"
          >
            Dashboard
          </a>
          <a
            href="/trade"
          >
            Trade
          </a>
          <a
            href="/transactions"
          >
            Transactions
          </a>
          <a
            href="/network"
          >
            Network
          </a>
          <a
            href="/settings"
          >
            Settings
          </a>
        </div>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button
          aria-label="Switch to light mode"
          class="flex h-9 w-9 items-center justify-center rounded-lg border border-slate-300/30 bg-white/90 text-slate-700 shadow-sm transition-all duration-200 hover:bg-slate-100 dark:border-slate-700/50 dark:bg-cosmos-800/80 dark:text-slate-100 dark:hover:bg-cosmos-700/90"
        >
          <svg
            class="h-4 w-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 12.79A9 9 0 1111.21 3a7 7 0 009.79 9.79z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <button
          class="btn-primary px-4 py-2 text-sm"
        >
          Connect Wallet
        </button>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SendPaymentForm snapshot renders idle state 1`] = `
<div>
  <div
    class="card animate-fade-in"
  >
    <h2
      class="font-display text-lg font-semibold text-white mb-6 flex items-center gap-2"
    >
      <svg
        class="w-5 h-5 text-stellar-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Send Payment
    </h2>
    <div
      class="space-y-5"
    >
      <div
        class="flex gap-2"
      >
        <button
          class="px-4 py-1.5 rounded-full text-sm font-medium border transition-all bg-stellar-500/15 text-stellar-300 border-stellar-500/30"
          type="button"
        >
          XLM
        </button>
        <button
          class="px-4 py-1.5 rounded-full text-sm font-medium border transition-all text-slate-400 border-white/10 hover:border-white/20"
          type="button"
        >
          USDC
        </button>
      </div>
      <div
        class="relative"
      >
        <div
          class="mb-2 flex items-center justify-between"
        >
          <label
            class="label mb-0"
          >
            Destination
          </label>
          <div
            class="flex items-center gap-2"
          >
            <button
              class="text-xs text-stellar-400 hover:text-stellar-300"
              type="button"
            >
              Favourites
            </button>
          </div>
        </div>
        <input
          class="input-field font-mono text-sm"
          placeholder="G... or @username"
          type="text"
          value=""
        />
      </div>
      <div>
        <div
          class="mb-2 flex items-center justify-between"
        >
          <label
            class="label mb-0"
          >
            Amount (
            XLM
            )
          </label>
          <button
            class="text-xs text-stellar-400 hover:text-stellar-300"
            type="button"
          >
            Max: 
            99.0000000 XLM
          </button>
        </div>
        <input
          class="input-field"
          placeholder="0.0000000"
          type="number"
          value=""
        />
      </div>
      <div>
        <label
          class="label"
        >
          Memo (optional)
        </label>
        <input
          class="input-field"
          maxlength="28"
          placeholder="Payment note..."
          type="text"
          value=""
        />
      </div>
      <button
        class="btn-primary w-full flex items-center justify-center gap-2"
        disabled=""
      >
        Send  XLM
      </button>
    </div>
  </div>
</div>
`;

exports[`TransactionList snapshot renders empty state 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="flex items-center justify-between mb-6"
    >
      <div
        class="h-5 w-36 rounded-lg bg-cosmos-700 animate-pulse"
      />
      <div
        class="h-4 w-14 rounded-lg bg-cosmos-700 animate-pulse"
      />
    </div>
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-3 p-3 rounded-xl bg-cosmos-800"
      >
        <div
          class="w-10 h-10 rounded-full bg-cosmos-700 animate-pulse flex-shrink-0"
        />
        <div
          class="flex-1 min-w-0 space-y-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="h-3 w-14 rounded bg-cosmos-700 animate-pulse"
            />
            <div
              class="h-5 w-28 rounded-lg bg-cosmos-700 animate-pulse"
            />
          </div>
          <div
            class="h-2.5 w-20 rounded bg-cosmos-700/70 animate-pulse"
          />
        </div>
        <div
          class="flex-shrink-0 h-4 w-20 rounded bg-cosmos-700 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 p-3 rounded-xl bg-cosmos-800"
      >
        <div
          class="w-10 h-10 rounded-full bg-cosmos-700 animate-pulse flex-shrink-0"
        />
        <div
          class="flex-1 min-w-0 space-y-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="h-3 w-14 rounded bg-cosmos-700 animate-pulse"
            />
            <div
              class="h-5 w-28 rounded-lg bg-cosmos-700 animate-pulse"
            />
          </div>
          <div
            class="h-2.5 w-20 rounded bg-cosmos-700/70 animate-pulse"
          />
        </div>
        <div
          class="flex-shrink-0 h-4 w-20 rounded bg-cosmos-700 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 p-3 rounded-xl bg-cosmos-800"
      >
        <div
          class="w-10 h-10 rounded-full bg-cosmos-700 animate-pulse flex-shrink-0"
        />
        <div
          class="flex-1 min-w-0 space-y-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="h-3 w-14 rounded bg-cosmos-700 animate-pulse"
            />
            <div
              class="h-5 w-28 rounded-lg bg-cosmos-700 animate-pulse"
            />
          </div>
          <div
            class="h-2.5 w-20 rounded bg-cosmos-700/70 animate-pulse"
          />
        </div>
        <div
          class="flex-shrink-0 h-4 w-20 rounded bg-cosmos-700 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 p-3 rounded-xl bg-cosmos-800"
      >
        <div
          class="w-10 h-10 rounded-full bg-cosmos-700 animate-pulse flex-shrink-0"
        />
        <div
          class="flex-1 min-w-0 space-y-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="h-3 w-14 rounded bg-cosmos-700 animate-pulse"
            />
            <div
              class="h-5 w-28 rounded-lg bg-cosmos-700 animate-pulse"
            />
          </div>
          <div
            class="h-2.5 w-20 rounded bg-cosmos-700/70 animate-pulse"
          />
        </div>
        <div
          class="flex-shrink-0 h-4 w-20 rounded bg-cosmos-700 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 p-3 rounded-xl bg-cosmos-800"
      >
        <div
          class="w-10 h-10 rounded-full bg-cosmos-700 animate-pulse flex-shrink-0"
        />
        <div
          class="flex-1 min-w-0 space-y-2"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="h-3 w-14 rounded bg-cosmos-700 animate-pulse"
            />
            <div
              class="h-5 w-28 rounded-lg bg-cosmos-700 animate-pulse"
            />
          </div>
          <div
            class="h-2.5 w-20 rounded bg-cosmos-700/70 animate-pulse"
          />
        </div>
        <div
          class="flex-shrink-0 h-4 w-20 rounded bg-cosmos-700 animate-pulse"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Transactions page snapshot renders unauthenticated state 1`] = `
<div>
  <div
    class="max-w-6xl mx-auto px-4 sm:px-6 py-16 cursor-default select-none"
  >
    <div
      class="text-center mb-10"
    >
      <h1
        class="font-display text-3xl font-bold text-white mb-3"
      >
        Transaction History
      </h1>
      <p
        class="text-slate-400"
      >
        Connect your wallet to view your payments
      </p>
    </div>
    <div
      class="card max-w-md mx-auto text-center animate-slide-up"
    >
      <div
        class="w-16 h-16 mx-auto mb-6 rounded-2xl bg-stellar-500/10 border border-stellar-500/20 flex items-center justify-center"
      >
        <svg
          class="w-8 h-8 text-stellar-400"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 12a2.25 2.25 0 00-2.25-2.25H15a3 3 0 11-6 0H5.25A2.25 2.25 0 003 12m18 0v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 9m18 0V6a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 6v3"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <h2
        class="font-display text-xl font-semibold text-white mb-2"
      >
        Connect your wallet
      </h2>
      <p
        class="text-slate-400 text-sm mb-6 leading-relaxed"
      >
        Choose your preferred wallet to connect to the Stellar network and start sending payments.
      </p>
      <div
        class="space-y-3 mb-6"
      >
        <button
          class="btn-primary w-full flex items-center justify-center gap-3"
        >
          <div
            class="w-5 h-5 rounded bg-white/10 flex items-center justify-center"
          >
            <svg
              class="w-3 h-3"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 12a2.25 2.25 0 00-2.25-2.25H15a3 3 0 11-6 0H5.25A2.25 2.25 0 003 12m18 0v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 9m18 0V6a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 6v3"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          Connect Freighter Wallet
        </button>
        <button
          class="btn-secondary w-full flex items-center justify-center gap-3"
          disabled=""
        >
          <div
            class="w-5 h-5 rounded bg-blue-500/20 flex items-center justify-center"
          >
            <svg
              class="w-3 h-3 text-blue-400"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
            >
              <rect
                height="16"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <line
                x1="7"
                x2="17"
                y1="8"
                y2="8"
              />
              <line
                x1="7"
                x2="17"
                y1="12"
                y2="12"
              />
              <line
                x1="7"
                x2="13"
                y1="16"
                y2="16"
              />
            </svg>
          </div>
          Connect Ledger Hardware Wallet
        </button>
      </div>
      <div
        class="space-y-3 text-xs text-slate-500"
      >
        <div>
          Don't have Freighter?
           
          <a
            class="text-stellar-400 hover:underline"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            Install the extension →
          </a>
        </div>
        <div
          class="text-amber-400"
        >
          Ledger requires Chrome, Edge, or another Chromium-based browser with WebHID support.
        </div>
        <div>
          Using Ledger? Make sure your device is connected, unlocked, and the Stellar app is open.
        </div>
      </div>
      <div
        class="mt-6 pt-4 border-t border-white/5 flex items-center justify-center gap-2 text-xs text-slate-500"
      >
        <span
          class="w-1.5 h-1.5 rounded-full bg-amber-400"
        />
        Connected to
         
        <span
          class="font-mono text-slate-400"
        >
          testnet
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletConnect snapshot renders wallet selection screen 1`] = `
<div>
  <div
    class="card max-w-md mx-auto text-center animate-slide-up"
  >
    <div
      class="w-16 h-16 mx-auto mb-6 rounded-2xl bg-stellar-500/10 border border-stellar-500/20 flex items-center justify-center"
    >
      <svg
        class="w-8 h-8 text-stellar-400"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 12a2.25 2.25 0 00-2.25-2.25H15a3 3 0 11-6 0H5.25A2.25 2.25 0 003 12m18 0v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 9m18 0V6a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 6v3"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
    <h2
      class="font-display text-xl font-semibold text-white mb-2"
    >
      Connect your wallet
    </h2>
    <p
      class="text-slate-400 text-sm mb-6 leading-relaxed"
    >
      Choose your preferred wallet to connect to the Stellar network and start sending payments.
    </p>
    <div
      class="space-y-3 mb-6"
    >
      <button
        class="btn-primary w-full flex items-center justify-center gap-3"
      >
        <div
          class="w-5 h-5 rounded bg-white/10 flex items-center justify-center"
        >
          <svg
            class="w-3 h-3"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 12a2.25 2.25 0 00-2.25-2.25H15a3 3 0 11-6 0H5.25A2.25 2.25 0 003 12m18 0v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 9m18 0V6a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 6v3"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        Connect Freighter Wallet
      </button>
      <button
        class="btn-secondary w-full flex items-center justify-center gap-3"
        disabled=""
      >
        <div
          class="w-5 h-5 rounded bg-blue-500/20 flex items-center justify-center"
        >
          <svg
            class="w-3 h-3 text-blue-400"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
          >
            <rect
              height="16"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <line
              x1="7"
              x2="17"
              y1="8"
              y2="8"
            />
            <line
              x1="7"
              x2="17"
              y1="12"
              y2="12"
            />
            <line
              x1="7"
              x2="13"
              y1="16"
              y2="16"
            />
          </svg>
        </div>
        Connect Ledger Hardware Wallet
      </button>
    </div>
    <div
      class="space-y-3 text-xs text-slate-500"
    >
      <div>
        Don't have Freighter?
         
        <a
          class="text-stellar-400 hover:underline"
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the extension →
        </a>
      </div>
      <div
        class="text-amber-400"
      >
        Ledger requires Chrome, Edge, or another Chromium-based browser with WebHID support.
      </div>
      <div>
        Using Ledger? Make sure your device is connected, unlocked, and the Stellar app is open.
      </div>
    </div>
    <div
      class="mt-6 pt-4 border-t border-white/5 flex items-center justify-center gap-2 text-xs text-slate-500"
    >
      <span
        class="w-1.5 h-1.5 rounded-full bg-amber-400"
      />
      Connected to
       
      <span
        class="font-mono text-slate-400"
      >
        testnet
      </span>
    </div>
  </div>
</div>
`;
